[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Enemy_Jet.gd" type="Script" id=1]
[ext_resource path="res://scenes/pTracer.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/air_sprites/air_units/eJet.png" type="Texture" id=3]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 0.552941, 0.709804, 0.423529, 0.423529, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale = 4.0
scale_random = 1.0
color_ramp = SubResource( 2 )

[node name="Enemy_Jet" type="RigidBody2D"]
collision_layer = 2
mass = 1514.29
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
linear_damp = 0.0
script = ExtResource( 1 )
projectile = ExtResource( 2 )

[node name="Hitbox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -21, -8, -16, -1, -16, 0, 6, 0, 7, -1, 13, -1, 14, 0, 16, 0, 17, -1, 20, -1, 25, 2, 25, 4, 24, 5, 22, 5, 21, 6, 15, 6, 14, 7, -24, 7, -26, 5, -26, 2, -25, 1, -24, 1, -24, -1, -25, -1, -25, -4, -26, -4, -26, -8 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 32, 64, 32 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
position = Vector2( -26, 3 )
lifetime = 0.2
local_coords = false
process_material = SubResource( 3 )

[node name="shotTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Enemy_Jet_body_entered"]
[connection signal="timeout" from="shotTimer" to="." method="_on_shotTimer_timeout"]
